--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Log file
 *.log
 
+# Profiling trash
+*.hprof
+
 # BlueJ files
 *.ctxt
 
@@ -11,7 +14,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+# *.jar
 *.war
 *.nar
 *.ear
@@ -21,4 +24,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+
+# Gradle
+build
+.gradle
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
